[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geo-gpt"
version = "0.1.0"
description = "Enhanced geocoding with pgeocode and LLM fallback"
readme = "README.txt"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Josh Janzen", email = "joshjanzen@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
# The version is read from setup.py for consistency

[project.urls]
Homepage = "https://github.com/zen-apps/geo-gpt"
Repository = "https://github.com/zen-apps/geo-gpt.git"
"Bug Tracker" = "https://github.com/zen-apps/geo-gpt/issues"

[project.scripts]
geo-gpt = "geo_gpt.cli:main"